auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: flm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: shaikmustafa/flm2026:authimage
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
