book.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: flm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: shaikmustafa/flm2026:bookimage
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
