db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: flm
spec:
  serviceName: db   # ⭐ REQUIRED for StatefulSet
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db
          image: saivennelakota/library-application:dbimage
          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          volumeMounts:
            - name: db-storage      # ⭐ must match below
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: db-storage           # ⭐ must match above
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
