app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: flm
spec:
  selector:
    app: app-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
