borrow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-service
  namespace: flm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow-service
  template:
    metadata:
      labels:
        app: borrow-service
    spec:
      containers:
        - name: borrow-service
          image: saivennelakota/library-application:borrowimage
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: borrow-service
  namespace: flm
spec:
  selector:
    app: borrow-service
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP
