ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-app-ingress
  namespace: flm
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5000
